# LangChain-4-DocumentHelper

./: Pipfile  ingestion.py  lab1.ipynb  main.py  pyproject.toml
backend/: core.py
